--- a/36-1.html
+++ b/36-1.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <style>
         * {padding: 0; margin: 0;}
-        .text {color:#0A0; font-size: 70px; position: absolute; left:50%; top:50%; transform: translate(-50%, -50%);}
-        .text::after {content: "|"; color:#C00; animation: cursor .5s linear  infinite;}
+        body {background-color: #00C;}
+        .text {color:#FFF; font-size: 70px; position: absolute; left:50%; top:50%; transform: translate(-50%, -50%);}
+        .text::after {content: "|"; color:#FFF; animation: cursor .5s linear  infinite;}
         @keyframes cursor {
             0% {opacity: 1;}
             100% {opacity: 0;}
