--- a/36-1.html
+++ b/36-1.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <style>
         * {padding: 0; margin: 0;}
+        ul, ol, li {list-style: none;}
+        a {text-decoration: none;}
         body {background-color: #00C;}
         .text {color:#FFF; font-size: 70px; position: absolute; left:50%; top:50%; transform: translate(-50%, -50%);}
         .text::after {content: "|"; color:#FFF; animation: cursor .5s linear  infinite;}
