--- a/타이핑 완성.html
+++ b/타이핑 완성.html
@@ -10,7 +10,7 @@
         .text { color:green; font-size:80px; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);}
         .text::after { content:"|"; color:#00C; 
                         animation-name:cursor; animation-duration:0.5s; animation-timing-function:linear; animation-iteration-count:infinite;}
-        .text .child { color:orange;}
+        .text .child { color:#009;}
         @keyframes cursor{
             0% { opacity:1;}
             100% { opacity:0;}
