진짜진짜최종본

--- a/36-1.html
+++ b/36-1.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="text"></div>
-    <div class="text2"></div>
+    <div>test1</div>
     <script src="textTyping.js"></script>
     <script>textTyping();</script>
 </body>
