--- a/타이핑 완성.html
+++ b/타이핑 완성.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <div class="text"></div>
+    <div>test1</div>
     <!-- <script>
         const text = document.querySelector(".text");
         let context = "Publisher";
