회사자리에서 수정함 아이고야

--- a/36-1.html
+++ b/36-1.html
@@ -8,8 +8,8 @@
     <style>
         * {padding: 0; margin: 0;}
         ul, ol, li {list-style: none;}
-        a {text-decoration: none;}
-        body {background-color: #00C;}
+        a {text-decoration: none; color:red;}
+        body {background-color: #00C; }
         .text {color:#FFF; font-size: 70px; position: absolute; left:50%; top:50%; transform: translate(-50%, -50%);}
         .text::after {content: "|"; color:#FFF; animation: cursor .5s linear  infinite;}
         @keyframes cursor {
@@ -20,6 +20,12 @@
     </style>
 </head>
 <body>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
     <div class="text"></div>
     <div>test1</div>
     <script src="textTyping.js"></script>
