집에서 작업완료함

--- a/36-1.html
+++ b/36-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document입니다일까요?</title>
     <style>
         * {padding: 0; margin: 0;}
         ul, ol, li {list-style: none;}
@@ -16,7 +16,7 @@
             0% {opacity: 1;}
             100% {opacity: 0;}
         }
-        .text .child {color:#FA0;}
+        .text .child {color:blue;}
     </style>
 </head>
 <body>
