--- a/타이핑 완성.html
+++ b/타이핑 완성.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>타이핑 완성입니다2222</title>
+    <title>타이핑 3333848374892374</title>
     <style>
         * {margin: 0; padding: 0;}
         .text { color:green; font-size:80px; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);}
@@ -18,6 +18,12 @@
     </style>
 </head>
 <body>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
+    <div class="text"></div>
     <div class="text"></div>
     <div>test1</div>
     <!-- <script>
